--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Kumbh Sans', sans-serif;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
